# Javineitor

./: App.py  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: __init__.py  logica.py  main.py  ui.py
src/javineitor/: __init__.py  _version.py  logica.py  main.py  styles.py  ui.py
tests/: test_basic.py  test_logica.py
