[metadata]
name = Javineitor
version = 0.1.0
author = "Marco Puliti"
description = "A tool to generate Latex documents from visual graphs."
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
packages_dir = 
    = src
include_package_data = True
python_requires = >=3.8

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests